# ROCK

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  GRAB_AUTHORITY_INI_HOTSWAP_PLAN.md  GRAB_NAMING_RENAME_PLAN.md  LICENSE  POTENTIAL_FIXES_PLAN.md  README.md  climbing-implementation-plan.md  vcpkg.json
.github/workflows/: branch-policy.yml  ci.yml  release.yml
SDK/ROCK/: README.md
analysis/: body-bone-collider-implementation-plan-2026-05-08.md  body-contact-review-fixes-2026-05-08.md  body-layer-47-body-collider-fix-2026-05-08.md  collision-layer-availability-ghidra-2026-05-08.md  debug-visualizer-shape-cache-audit-2026-05-08.md  fo4vr-rock-lifecycle-engine-fix-code-review-2026-05-09.md  fo4vr-rock-lifecycle-engine-fix-implementation-tracker-2026-05-09.md  generated-collider-oversize-audit-2026-05-08.md  grab-polish-code-review-2026-05-11.md  grab-polish-implementation-2026-05-11.md  grab-quality-adaptive-held-response-2026-05-09.md  grab-quality-code-review-2026-05-09.md  grab-quality-review-fixes-2026-05-09.md  higgs-dynamic-grab-investigation-2026-05-11.md  higgs-rock-functionality-gap-map-2026-05-08.md  higgs-scaffolded-functionality-details-2026-05-08.md  native-melee-direct-collision-gap-2026-05-09.md  native-melee-rightstick-gate-2026-05-09.md  native-mouse-spring-grab-tuning-2026-05-08.md  nearby-grab-damping-binary-verification-2026-05-08.md  player-character-controller-contact-filter-2026-05-08.md  player-controller-and-native-biped-collision-2026-05-08.md  rock-cleanup-pass-01-2026-05-08.md  rock-cleanup-pass-02-config-authority-2026-05-08.md  rock-code-review-fixes-2026-05-09.md  rock-performance-improvement-plan-addendum-faster-hdt-bullet-2026-05-09.md  rock-performance-scan-2026-05-08.md  runtime-clock-audit-2026-05-08.md  shoulder-stash-plan-and-tracker-2026-05-11.md  skyrim-faster-hdt-smp-cuda-performance-map-2026-05-09.md  skyrim-hdt-smp-engine-fix-map-2026-05-09.md  smp-performance-transfer-status-rock-2026-05-09.md
cmake/: package.cmake  resources.rc.in
data/config/: ROCK.ini
data/mod/: README.txt
docs/: 2026-05-02-contact-pipeline-refactor-notes.md  2026-05-02-havok-state-machine-refactor-plan.md  2026-05-02-planck-load-reduction-audit.md  2026-05-02-scissors-porting-context.md  2026-05-03-collider-planet-regression-review.md  2026-05-03-created-body-stutter-timestep-implementation-progress.md  2026-05-03-generated-body-native-boundary-fixes.md  2026-05-03-input-remap-menu-gate-fix.md  2026-05-03-input-remap-trigger-auto-ready-fix.md  2026-05-03-weapon-collision-compound-semantic-mode2-tracker.md  2026-05-03-weapon-collision-visualizer-review.md  2026-05-04-generated-body-drive-unit-review.md  2026-05-04-generated-collider-full-code-review.md  GHIDRA_CONSTRAINT_OFFSET_0x22.md  GHIDRA_MOTION_0x7C_FIELD_ANALYSIS.md  GHIDRA_NIAVOBJECT_VTABLE_VERIFICATION.md  GHIDRA_SKINNED_MESH_FINDINGS.md  body-collider-dynamic-worn-sizing-plan-2026-05-13.md  custom-dynamic-grab-authority-current-findings-2026-05-12.md  custom-dynamic-grab-authority-gap-map-2026-05-15.md  custom-dynamic-grab-authority-tracker-2026-05-12.md  debug-body-overlay.md  dynamic-grab-2000-frame-diagnostics-2026-05-15.md  dynamic-grab-angular-authority-review-2026-05-13.md  dynamic-grab-angular-relation-sweep-2026-05-15.md  dynamic-grab-custom-authority-plan-2026-05-12.md  dynamic-grab-frame-authority-current-findings-2026-05-13.md  dynamic-grab-local-relation-fix-2026-05-16.md  dynamic-grab-motion-frame-authority-fix-2026-05-15.md  dynamic-grab-orientation-basis-map-2026-05-12.md  dynamic-grab-quality-plan-2026-05-15.md  dynamic-prop-object-tree-implementation-notes.md  fo4vr-shape-cast-selection-mapping.md  frik-v6-weapon-authority-progress.md  full-planck-port-plan.md  ghidra-mouse-spring-vs-hkp-motors-2026-05-12.md  ghidra_bhkNPCollisionObject_creation_pipeline_2026-03-31.md  ghidra_body_helper_safety_audit_2026-04-22.md  ghidra_collision_owner_and_body_local_audit_2026-04-22.md  ghidra_constraint_signal_chain_2026-03-31.md  (+40 more)
docs/implementation-notes/: 2026-06-01-havok-timing-fix.md  2026-06-01-selection-beam.md  2026-06-06-soft-contact-hand-layer-split.md  2026-06-11-grab-acquisition-cache-review-fix.md  GRAB_SUPPORT_MODEL_2026-05-21.md  (+13 more)
scripts/: remove_cpp_comments.py
src/: PCH.h  ROCKMain.cpp  ROCKMain.h  RockConfig.cpp  RockConfig.h  RockUtils.h  exports.def  resources.h
tasks/: 2026-05-31-bad-grab-col-axismap-investigation.md  lessons.md  pivotA-local-fix-handoff-2026-05-26.md  todo.md
tests/: ActiveGrabBodyLifecyclePolicyTests.cpp  ActorEquipmentGrabSourceTests.ps1  ApiHeaderMacroBoundarySourceTests.ps1  ArticulatedAcquisitionPolicyTests.cpp  BethesdaPhysicsBodySourceTests.ps1  BodyColliderLifecycleIsolationSourceTests.ps1  BodyColliderLifetimeSourceTests.ps1  BodyContactRuntimeTests.cpp  BodyFramePolicyTests.cpp  ColliderTuningOverridesSourceTests.ps1  CollisionSuppressionRegistrySourceTests.ps1  CommonLibPolicyPCH.h  ConfigDefaultParitySourceTests.ps1  ContactEvidenceOwnershipSourceTests.ps1  ContactPipelinePolicyTests.cpp  ContactRuntimePolicyTests.cpp  ContactSignalSubscriptionPolicyTests.cpp  ContactTargetIdentityPolicyTests.cpp  ContactTargetIdentitySourceTests.ps1  DebugControllerPolicyTests.cpp  DebugControllerRuntimeSourceTests.ps1  DebugOverlayPolicyTests.cpp  DebugOverlayShapeCacheSourceTests.ps1  DynamicMovableStaticGrabPolicyTests.cpp  DynamicMovableStaticGrabSourceTests.ps1  DynamicPullWeaponScanSourceTests.ps1  FarSelectionBlacklistSourceTests.ps1  FarSelectionHmdConeSourceTests.ps1  FeedbackHapticsPolicyTests.cpp  FrikApiParitySourceTests.ps1  FrikVisualAuthorityBridgeSourceTests.ps1  GeneratedBodyContactRegistryPolicyTests.cpp  GeneratedBodyContactRegistrySourceTests.ps1  GeneratedBodyDriveSourceTests.ps1  GeneratedColliderDimensionSourceTests.ps1  GeneratedColliderLocalOffsetSourceTests.ps1  GeneratedKeyframedBodyDrivePolicyTests.cpp  GeneratedKeyframedBodyDriveSafetySourceTests.ps1  GeneratedKeyframedBodyDriveTelemetrySourceTests.ps1  GrabAcquisitionCacheSourceTests.ps1  (+95 more)
(+408 files in other folders)
